# gallery

./: .env.example  .gitignore  CLAUDE.md  README.md  compose.override.yml  compose.yml  justfile  prompt.md
backend/: Dockerfile  cli.py  gunicorn.conf.py  pyproject.toml
backend/app/: __init__.py  config.py  models.py
backend/app/api/: admin.py  downloads.py  galleries.py  images.py
backend/app/services/: audit_logger.py  image_processor.py  zip_generator.py
backend/app/utils/: decorators.py  helpers.py
backend/tests/unit/: test_helpers.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  theme.js
frontend/src/components/admin/: AdminDashboard.jsx  GalleryDetails.jsx  GalleryManager.jsx  ImageUploader.jsx  Login.jsx
frontend/src/components/gallery/: GalleryCard.jsx  GalleryGrid.jsx  GalleryList.jsx  ImageModal.jsx  ImageThumbnail.jsx  PasswordPrompt.jsx
frontend/src/hooks/: useAuth.jsx  useLazyLoad.jsx
frontend/src/services/: api.js  auth.js
traefik/: traefik-dev.yml  traefik.yml
